Resolved code bugs